--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             position: absolute;
             top: 10px;
             left: 10px;
+            display: none;
         }
 
         .delete-marker-btn {
@@ -102,8 +103,8 @@
 
 <body>
     <div id="account-buttons">
-        <button id="delete-account-button" style="display: none;">Delete Account</button>
-        <button id="logout-button" style="display: none;">Logout</button>
+        <button id="delete-account-button">Delete Account</button>
+        <button id="logout-button">Logout</button>
     </div>
     <div id="login-button-container">
         <button id="login-button">Login with Google</button>
@@ -118,7 +119,6 @@
             <option value="cleanup">Cleanup</option>
             <option value="calligraphy">Calligraphy</option>
         </select>
-        <input type="file" id="photo">
         <textarea id="description" placeholder="Description"></textarea>
         <button type="submit">Submit</button>
     </form>
@@ -126,7 +126,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 
     <script>
@@ -144,7 +143,6 @@
         firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
         const db = firebase.firestore();
-        const storage = firebase.storage();
         const rtdb = firebase.database();
 
         let map;
@@ -205,27 +203,26 @@
         }
 
         async function loadMarkersFromFirestore() {
-    const snapshot = await db.collection("projects").get();
-    snapshot.forEach(doc => {
-        const data = doc.data();
-        const location = data.location;
+            const snapshot = await db.collection("projects").get();
+            snapshot.forEach(doc => {
+                const data = doc.data();
+                const location = data.location;
 
-        // Check if location is valid
-        if (location && typeof location.latitude === 'number' && typeof location.longitude === 'number') {
-            const projectType = data.type;
-            const color = getProjectColor(projectType);
+                if (location && typeof location.latitude === 'number' && typeof location.longitude === 'number') {
+                    const projectType = data.type;
+                    const color = getProjectColor(projectType);
 
-            L.circleMarker([location.latitude, location.longitude], {
-                color: color,
-                radius: 8
-            }).addTo(map)
-                .bindPopup(`Project: ${data.name}<br>Type: ${data.type}<br>Description: ${data.description}<br><button onclick="openChatroom('${data.name}')">Open Chatroom</button>`)
-                .openPopup();
-        } else {
-            console.error('Invalid location data:', location);
+                    L.circleMarker([location.latitude, location.longitude], {
+                        color: color,
+                        radius: 8
+                    }).addTo(map)
+                        .bindPopup(`Project: ${data.name}<br>Type: ${data.type}<br>Description: ${data.description}<br><button onclick="openChatroom('${data.name}')">Open Chatroom</button>`)
+                        .openPopup();
+                } else {
+                    console.error('Invalid location data:', location);
+                }
+            });
         }
-    });
-}
 
         function locateUser() {
             map.locate({ setView: true, maxZoom: 16 });
@@ -244,11 +241,11 @@
 
         function getProjectColor(type) {
             if (type === 'cleanup') {
-                return '#3aeb34'; // Light Green for Cleanup
+                return '#3aeb34';
             } else if (type === 'calligraphy') {
-                return '#349beb'; // Light Purple for Calligraphy
+                return '#349beb';
             }
-            return '#000000'; // Default to black if no type is selected
+            return '#000000';
         }
 
         document.getElementById('locate-button').addEventListener('click', locateUser);
@@ -258,97 +255,76 @@
             document.getElementById('mark-area-button').textContent = isMarking ? 'Stop Marking' : 'Mark Area';
         });
 
-        document.getElementById('report-form').addEventListener('submit', async (e) => {
-            e.preventDefault();
-
-            const projectName = document.getElementById('project-name').value;
-            const projectType = document.getElementById('project-type').value;
-            const location = document.getElementById('location').value;
-            const description = document.getElementById('description').value;
-            const fileInput = document.getElementById('photo').files[0];
-
-            let imageUrl = '';
-
-            if (fileInput) {
-                const storageRef = storage.ref();
-                const fileRef = storageRef.child(`project_photos/${fileInput.name}`);
-                await fileRef.put(fileInput);
-                imageUrl = await fileRef.getDownloadURL();
-            }
-
-            await db.collection('projects').add({
-                name: projectName,
-                type: projectType,
-                location,
-                description,
-                imageUrl,
-                createdAt: firebase.firestore.FieldValue.serverTimestamp(),
-            });
-
-            alert('Project submitted successfully!');
-            document.getElementById('report-form').reset();
-        });
-
-        auth.onAuthStateChanged((user) => {
-            if (user) {
-                document.getElementById('login-button').style.display = 'none';
-                document.getElementById('logout-button').style.display = 'block';
-document.getElementById('logout-button').style.marginTop = '5px';
-document.getElementById('logout-button').style.marginBottom = '10px';
-
-                document.getElementById('delete-account-button').style.display = 'block';
-document.getElementById('logout-button').style.marginTop = '5px'; // Adjust as needed
-            } else {
-                document.getElementById('login-button').style.display = 'block';
-                document.getElementById('logout-button').style.display = 'none';
-document.getElementById('logout-button').style.marginTop = '5px';
-document.getElementById('logout-button').style.marginBottom = '10px';
-        
-                document.getElementById('delete-account-button').style.display = 'none';
-document.getElementById('delete-account-button').style.marginBottom = '5px'; // Adjust as needed               
-            }
-        });
-
-        document.getElementById('login-button').addEventListener('click', () => {
-            const provider = new firebase.auth.GoogleAuthProvider();
-            auth.signInWithPopup(provider).then((result) => {
-                console.log('User logged in');
-            }).catch((error) => {
-                console.error('Error logging in:', error);
-            });
-        });
-
-        document.getElementById('logout-button').addEventListener('click', () => {
-            auth.signOut().then(() => {
-                console.log('User logged out');
-            }).catch((error) => {
-                console.error('Error logging out:', error);
-            });
-        });
-
-        document.getElementById('delete-account-button').addEventListener('click', () => {
-            const user = auth.currentUser;
-            if (user) {
-                user.delete().then(() => {
-                    console.log('Account deleted');
-                }).catch((error) => {
-                    console.error('Error deleting account:', error);
-                });
-            }
-        });
-
-        function createChatroom(projectName) {
-            rtdb.ref(`chatrooms/${projectName}`).set({
+        async function createChatroom(projectName) {
+            const chatroomRef = rtdb.ref('chatrooms/' + projectName);
+            chatroomRef.set({
                 createdAt: firebase.database.ServerValue.TIMESTAMP
             });
         }
 
         function openChatroom(projectName) {
-            window.open(`/chatroom.html?project=${projectName}`, '_blank');
+            const chatroomURL = 'chatroom.html?project=' + encodeURIComponent(projectName);
+            window.location.href = chatroomURL;
         }
+
+        document.getElementById('report-form').addEventListener('submit', async function (e) {
+            e.preventDefault();
+
+            const projectName = document.getElementById('project-name').value;
+            const projectType = document.getElementById('project-type').value;
+            const description = document.getElementById('description').value;
+            const location = currentMarkers.length > 0 ? currentMarkers[0].location : null;
+
+            if (!location) {
+                alert('Please mark a location on the map.');
+                return;
+            }
+
+            await db.collection("projects").doc(projectName).set({
+                name: projectName,
+                type: projectType,
+                description: description,
+                location: new firebase.firestore.GeoPoint(location.lat, location.lng)
+            });
+
+            currentMarkers = [];
+            markerCount = 0;
+            isMarking = false;
+            document.getElementById('mark-area-button').textContent = 'Mark Area';
+            alert('Project submitted successfully!');
+        });
+
+        auth.onAuthStateChanged(user => {
+            if (user) {
+                document.getElementById('login-button').style.display = 'none';
+                document.getElementById('account-buttons').style.display = 'block';
+
+                document.getElementById('logout-button').addEventListener('click', () => {
+                    auth.signOut();
+                });
+
+                document.getElementById('delete-account-button').addEventListener('click', async () => {
+                    const user = auth.currentUser;
+                    if (user) {
+                        await user.delete();
+                        alert('Account deleted successfully.');
+                    }
+                });
+            } else {
+                document.getElementById('login-button').style.display = 'block';
+                document.getElementById('account-buttons').style.display = 'none';
+            }
+        });
+
+        document.getElementById('login-button').addEventListener('click', () => {
+            const provider = new firebase.auth.GoogleAuthProvider();
+            auth.signInWithPopup(provider).catch(error => {
+                console.error('Error during login:', error);
+            });
+        });
 
         window.onload = initMap;
     </script>
 </body>
 
-</html>
+    </html>
