--- a/index.html
+++ b/index.html
@@ -128,16 +128,29 @@
         }
 
         .chatroom-container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
+            max-width: 400px;
+            width: 100%;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             background-color: #E8F7DD;
             border-radius: 10px;
             border: 2px solid #374148;
+            padding: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            display: none;
+            z-index: 9999;
+        }
+
+        .chatroom-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
 
         .chatroom-messages {
-            max-height: 400px;
+            max-height: 300px;
             overflow-y: auto;
             background-color: #f0f0f0;
             padding: 10px;
@@ -167,6 +180,27 @@
 
         .chatroom-send:hover {
             background-color: #4E8A2F;
+        }
+
+        .chat-bubble {
+            padding: 10px;
+            margin: 5px 0;
+            border-radius: 10px;
+            max-width: 70%;
+        }
+
+        .chat-bubble.left {
+            background-color: #374148;
+            color: #ffffff;
+            text-align: left;
+            margin-right: auto;
+        }
+
+        .chat-bubble.right {
+            background-color: #66B539;
+            color: #ffffff;
+            text-align: right;
+            margin-left: auto;
         }
     </style>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
@@ -202,7 +236,11 @@
         <button type="submit">Submit</button>
     </form>
 
-    <div id="chatroom-container" class="chatroom-container" style="display:none;">
+    <div id="chatroom-container" class="chatroom-container">
+        <div class="chatroom-header">
+            <h2>Chatroom</h2>
+            <button id="close-chatroom">Close</button>
+        </div>
         <div class="chatroom-messages" id="chatroom-messages"></div>
         <textarea id="chatroom-input" class="chatroom-input" placeholder="Type your message..."></textarea>
         <button id="chatroom-send" class="chatroom-send">Send</button>
@@ -409,6 +447,10 @@
             loadChatMessages();
         }
 
+        document.getElementById('close-chatroom').addEventListener('click', () => {
+            document.getElementById('chatroom-container').style.display = 'none';
+        });
+
         function loadChatMessages() {
             const chatroomRef = rtdb.ref('chatrooms/' + activeChatroom + '/messages');
             chatroomRef.on('value', (snapshot) => {
@@ -418,6 +460,8 @@
                 for (let id in messages) {
                     const message = messages[id];
                     const messageDiv = document.createElement('div');
+                    messageDiv.classList.add('chat-bubble');
+                    messageDiv.classList.add(message.senderId === auth.currentUser.uid ? 'right' : 'left');
                     messageDiv.textContent = `${message.sender}: ${message.text}`;
                     chatroomMessages.appendChild(messageDiv);
                 }
@@ -433,6 +477,7 @@
             const newMessageRef = chatroomRef.push();
             newMessageRef.set({
                 sender: auth.currentUser.displayName,
+                senderId: auth.currentUser.uid,
                 text: messageText
             });
 
@@ -457,7 +502,7 @@
                             `<div>Project: ${data.name}<br>Type: ${data.type}<br>Description: ${data.description}<br>Created by: ${data.userName}<br>Date: ${data.createdAt.toDate().toLocaleString()}</div>
                             <div class="marker-buttons">
                                 <button class="chatroom-btn" onclick="openChatroom('${data.name}')">Chatroom</button>
-                                <button class="delete-marker-btn" onclick="deleteMarker('${doc.id}', this)">Delete</button>
+                                ${auth.currentUser && auth.currentUser.uid === data.userId ? `<button class="delete-marker-btn" onclick="deleteMarker('${doc.id}', this)">Delete</button>` : ''}
                             </div>`)
                         .openPopup();
                 } else {
@@ -467,12 +512,12 @@
         }
 
         async function deleteMarker(projectId, button) {
-            if (confirm('Are you sure you want to delete your project?')) {
-                try {
+            if (confirm('Are you sure you want to delete your project?')) { try {
                     await db.collection("projects").doc(projectId).delete();
-                    await rtdb.ref('chatrooms/' + projectId).remove(); // Delete chatroom data
+                    await rtdb.ref('chatrooms/' + projectId).remove(); // Delete chatroom data from RTDB
                     const marker = button.closest('.leaflet-popup')._source;
                     map.removeLayer(marker); // Remove marker from map
+                    alert('Project and associated chatroom deleted successfully!');
                 } catch (error) {
                     console.error('Error deleting marker:', error);
                 }
