--- a/index.html
+++ b/index.html
@@ -202,6 +202,15 @@
             text-align: right;
             margin-left: auto;
         }
+
+        /* Contact Info Style */
+        #contact-info {       
+            bottom: 10px;
+            right: 10px;
+            font-size: 10px;
+            color: #151B1F;
+            text-align: left;
+        }
     </style>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
 </head>
@@ -277,6 +286,7 @@
         let userProjects = [];
         let activeChatroom = '';
         let lastMessageTime = 0;
+        let markedLocation = null;
 
         function initMap() {
             map = L.map('map').setView([23.8103, 90.4125], 13);
@@ -287,14 +297,14 @@
 
             loadMarkersFromFirestore();
 
-                    map.on('click', (e) => {
-    if (markerCount > 0) {
-        alert("You must submit or delete your project before creating another one!");
-        return;
-    }
-    if (isMarking && markerCount < maxMarkers) {
-        const projectName = prompt("Enter project name:");
-        if (!projectName) return;
+            map.on('click', (e) => {
+                if (markerCount > 0) {
+                    alert("You must submit or delete your project before creating another one!");
+                    return;
+                }
+                if (isMarking && markerCount < maxMarkers) {
+                    const projectName = prompt("Enter project name:");
+                    if (!projectName) return;
 
                     document.getElementById('project-name').value = projectName;
                     const projectType = document.getElementById('project-type').value;
@@ -312,6 +322,7 @@
                             </div>`)
                         .openPopup();
 
+                    markedLocation = e.latlng;
                     currentMarkers.push({ marker, projectName, projectType, location: e.latlng });
                     markerCount++;
                     if (markerCount >= maxMarkers) {
@@ -554,7 +565,7 @@
 
         function clearAllMarkers() {
             currentMarkers.forEach(marker => {
-                map.removeLayer(marker.marker);
+                map.removeLayer(marker);
             });
             currentMarkers = [];
         }
@@ -577,13 +588,13 @@
 
             if (!auth.currentUser) {
                 alert('You must be logged in to perform this action.');
-                                return;
+                return;
             }
 
             const projectName = document.getElementById('project-name').value;
             const projectType = document.getElementById('project-type').value;
             const description = document.getElementById('description').value;
-            const location = currentMarkers.length > 0 ? currentMarkers[0].location : null;
+            const location = markedLocation;
 
             if (!location) {
                 alert('Please mark a location on the map.');
@@ -609,6 +620,7 @@
 
             currentMarkers = [];
             markerCount = 0;
+            markedLocation = null;
             isMarking = false;
             document.getElementById('mark-area-button').textContent = 'Mark Area';
             alert('Project submitted successfully!');
@@ -630,7 +642,14 @@
 
         window.onload = initMap;
     </script>
+
+    <!-- Watermark -->
+    <!-- Ashfaqul Alam -->
+
+    <!-- Creator Info -->
+    <div id="contact-info">
+        This website was created by <a href="https://www.facebook.com/profile.php?id=100016903667257&mibextid=ZbWKwL">Ashfaqul Alam</a> to serve our broader social interest | Email: kittlerthebittler@gmail.com
+    </div>
 </body>
 
-</html>
-       
+</html>    
