--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             right: 10px;
             font-size: 10px;
             color: #151B1F;
-            text-align: left;
+            text-align: center;
         }
     </style>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
